# fteqw

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  README.txt  build_qc.sh  build_setup.sh  build_wip.sh  flatpak.json  fte.m4  imgtool.c
.forgejo/workflows/: bin-linux64-release.yaml
.github/workflows/: main.yml
CVSROOT/: checkoutlist  ciabot_cvs.pl
documentation/: Building.md  Credits.md  Dependencies.md  QuickStart.md  Tools.md
engine/: .cproject  .project  BSDMakefile  BSDmakefile  Makefile  Makefile.Linux  Makefile.SDL  Makefile.mingw  README.MSVC  makeconfig.sh
engine/botlib/: be_aas_bspq3.c  be_aas_entity.c  be_aas_main.c  be_aas_move.c  be_aas_reach.c  be_aas_route.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_interface.c  botlib.h  l_log.c  l_precomp.c  l_script.c  l_struct.c  q_platform.h  q_shared.h  standalone.c
engine/client/: .cvsignore  api_menu.h  cd_linux.c  cd_null.c  cd_sdl.c  cd_win.c  cdaudio.h  cl_cam.c  cl_cg.c  cl_demo.c  cl_ents.c  cl_ignore.c  cl_ignore.h  cl_input.c  cl_main.c  cl_master.h  cl_parse.c  cl_plugin.inc  cl_pred.c  cl_screen.c  cl_tent.c  cl_ui.c  clhl_game.c  client.h  clq2_cin.c  clq2_ents.c  clq3_parse.c  clq3defs.h  console.c  fragstats.c  fte_eukara64.h  image.c  image_astc.h  in_droid.c  in_generic.c  in_macos.c  in_morphos.c  in_morphos.h  in_raw.h  in_sdl.c  (+99 more)
engine/common/: asm_i386.h  bothdefs.h  bspfile.h  cmd.c  cmd.h  com_bih.c  com_bih.h  com_mesh.c  com_mesh.h  com_phys_bullet.cpp  com_phys_ode.c  common.c  common.h  config_freecs.h  config_fteqw.h  config_fteqw_noweb.h  config_minimal.h  config_nocompat.h  config_wastes.h  console.h  crc.c  crc.h  cvar.c  cvar.h  fs.c  fs.h  fs_dzip.c  fs_pak.c  fs_stdio.c  fs_vpk.c  fs_win32.c  fs_xz.c  fs_zip.c  gl_q2bsp.c  huff.c  json.c  log.c  math.s  mathlib.c  mathlib.h  (+39 more)
engine/d3d/: d3d11_backend.c  d3d11_image.c  d3d11_shader.c  d3d8_backend.c  d3d8_image.c  d3d_backend.c  d3d_draw.c  d3d_image.c  d3d_mesh.c  d3d_rmain.c  d3d_rsurf.c  d3d_shader.c  d3dquake.h  vid_d3d.c  vid_d3d11.c  vid_d3d8.c
engine/d3d7/: d3d7_rmain.c  d3d7_rsurf.c  d3d7quake.h  vid_d3d7.c
engine/d3d9/: d3d9_draw.c  d3d9_mesh.c  d3d9_rmain.c  d3d9_rsurf.c  d3d9quake.h  vid_d3d9.c
engine/dotnet/: .cvsignore  dotnet.sln  dotnet.vcproj
engine/dotnet2003/: ftequake.sln  ftequake.vcproj  howto.txt
engine/dotnet2005/: botlib.vcproj  droid.vcproj  emscripten.vcproj  ftequake.sln  ftequake.vcproj  ftequake_SDL.vcproj  gas2masm.vcproj  npfte.vcproj  npqtv.vcproj  resource.h
engine/dotnet2008/: botlib.vcproj  ftequake.sln  ftequake.vcproj  ftequake_SDL.vcproj  npfte.vcproj  npqtv.vcproj  readme.txt  resource.h
engine/dotnet2010/: botlib.vcxproj  ftequake.sln  ftequake.vcxproj  ftequake.vcxproj.filters  ftequake_SDL.vcxproj  gas2masm.vcxproj  gas2masm.vcxproj.filters  npfte.vcxproj  npfte.vcxproj.filters  npqtv.vcxproj  npqtv.vcxproj.filters  readme.txt
engine/droid/: AndroidManifest.xml  autoexec.cfg  default.fmf  fte.cfg
engine/email/: imapnoti.c  pop3noti.c  sv_pop3.c  sv_smtp.c
engine/ftequake/: .cvsignore  FTEQuake.dev  ftequake.dsp  ftequake.dsw  npapi.def  npplug.rc  npqtv.dsp
engine/gas2masm/: gas2masm.dsp
engine/gl/: gl_alias.c  gl_backend.c  gl_bloom.c  gl_draw.c  gl_draw.h  gl_font.c  gl_heightmap.c  gl_hlmdl.c  gl_model.c  gl_model.h  gl_ngraph.c  gl_ppl.c  gl_rlight.c  gl_rmain.c  gl_rmisc.c  gl_rsurf.c  gl_screen.c  gl_shader.c  gl_shadow.c  gl_terrain.h  gl_vidcocoa.m  gl_vidcommon.c  gl_viddroid.c  gl_videgl.c  gl_videgl.h  gl_vidgles.c  gl_vidgles.h  gl_vidlinuxglx.c  gl_vidmacos.c  gl_vidmorphos.c  gl_vidnt.c  gl_vidnull.c  gl_vidrpi.c  gl_vidsdl.c  gl_vidtinyglstubs.c  gl_vidwayland.c  gl_warp.c  glmod_doom.c  glquake.h  glsupp.h  (+4 more)
engine/http/: ftpclient.c  ftpserver.c  httpclient.c  httpserver.c  iweb.h  iwebiface.c  webgen.c
engine/irc/: ircclient.c
engine/libs/: .cvsignore  jconfig.h  jmorecfg.h  jpeg.lib  libjpeg64.lib  libpng.lib  libpng64.lib  unzip.c  unzip.h  zconf.h  zlib.h  zlib.lib  zlib64.lib
engine/nacl/: fs_ppapi.c  gl_vidppapi.c  snd_ppapi.c  sys_ppapi.c
engine/npfte/: chrome.pem  install.rdf  manifest.json
engine/nqnet/: net_dgrm.c  net_dgrm.h  net_loop.c  net_loop.h  net_main.c  net_udp.c  net_vcr.c  net_win.c  net_wins.h  net_wipx.c  net_wipx.h  nqnet.h
engine/partcfgs/: faithful.cfg  generatebuiltin.c  h2part.cfg  high.cfg  highfps.cfg  q2part.cfg  spikeset.cfg  tsshaft.cfg
engine/qclib/: .cvsignore  Makefile  PR_COMP.H  Pr_exec.c  Progslib.h  QccMain.c  cmdlib.h  comprout.c  decomp.c  execloop.h  execloop16.h  execloop16d.h  execloop32.h  execloop32d.h  fteqcc.rc  gui.h  hash.c  hash.h  initlib.c  packager.c  pr_comp.h  pr_edict.c  pr_exec.c  pr_multi.c  pr_x86.c  progsint.h  progslib.h  progtype.h  qcc.dsp  qcc.h  qcc_cmdlib.c  qcc_pr_comp.c  qcc_pr_lex.c  qccgui.c  qccguiqt.cpp  qccguistuff.c  qccmain.c  qcctui.c  qcd.h  qcd_main.c  (+3 more)
engine/qux/: m_x.c  qux.h  x_reqs.c  x_res.c
fteqtv/: .cvsignore  Makefile  bsp.c  cmd.h  control.c  crc.c  forward.c  httpsv.c  mdfour.c  menu.c  msg.c  net_qtv.h  netchan.c  nq_api.c  parse.c  pmove.c  protocol.h  qtv.h  qtvprox.dsp  qtvprox_msvs_80.sln  qtvprox_msvs_80.vcproj  qw.c  rcon.c  sc_dsound.c  source.c  sp_dsound.c
games/: fortressone.fmf  quake-demo.fmf  xonotic_85.fmf
iqm/: Makefile  Makefile.mingw  README.txt  iqm.cpp  iqm.h  util.h
plugins/: .cvsignore  Makefile  engine.h  memory.c  net_ssl_openssl.c  openxr.c  paths.bat  plugin.c  plugin.h  plugins.dsw  qvm_api.c  readme-linux.txt  readme.txt
q3asm2/: Makefile  q3asm2.c
quakec/: dpsymbols.src
specs/: antilag.txt  browser.txt  browserexample.html  bspx.txt  changelevels.md  chunkeddownloads.txt  console.txt  csqc_for_idiots.txt  distort.pk3  distort.txt  example.shader  ext_csqc_1.txt  fonts.txt  fte_manifests.txt  glsl.md  mapcluster.txt  modmaking.txt  multiprogs.txt  particles.txt  qc_extensions.txt  replacementdeltas.txt  rotating-brushes.md  rtlights.txt  scriptable menus.txt  skeletal.txt  spawning-entities-from-external-bsps.md  splitscreen.txt  videocapture.txt  viewmodels.md
(+616 files in other folders)
